--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,10 @@ jobs:
             target: x86_64-apple-darwin
             artifact_name: flux9s
             asset_name: flux9s-macos-x86_64.tar.gz
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            artifact_name: flux9s
+            asset_name: flux9s-macos-aarch64.tar.gz
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             artifact_name: flux9s.exe
@@ -130,6 +134,8 @@ jobs:
     name: Create GitHub Release
     needs: [build, publish]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       
@@ -151,5 +157,8 @@ jobs:
           generate_release_notes: true
           tag_name: ${{ github.ref }}
           name: Release ${{ steps.get_version.outputs.version }}
+          fail_on_unmatched_files: true
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
