--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "flux9s"
 
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["Dan Guns <danbguns@gmail.com>"]
 description = "A K9s-inspired terminal UI for monitoring Flux GitOps resources"
@@ -13,8 +13,8 @@ keywords = ["kubernetes", "flux", "gitops", "tui", "k9s"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
-# Kubernetes client
-kube = { version = "2.0.1", features = ["runtime", "derive"] }
+# Kubernetes client with HTTP proxy support
+kube = { version = "2.0.1", features = ["runtime", "derive", "http-proxy"] }
 # k8s-openapi version feature - must match kube-rs version
 k8s-openapi = { version = "0.26.0", default-features = false, features = [
     "v1_31",
@@ -40,6 +40,7 @@ async-trait = "0.1"
 
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
+url = "2.5"
 
 [dev-dependencies]
 # Testing
