--- a/.github/workflows/auto-tag-release.yml
+++ b/.github/workflows/auto-tag-release.yml
@@ -50,3 +50,20 @@ jobs:
         if: steps.check_tag.outputs.exists == 'true'
         run: |
           echo "⚠️ Tag v${{ steps.version.outputs.version }} already exists, skipping tag creation"
+
+      - name: Trigger release workflow
+        if: steps.check_tag.outputs.exists == 'false'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'release.yml',
+              ref: `v${{ steps.version.outputs.version }}`,
+              inputs: {
+                tag: `v${{ steps.version.outputs.version }}`
+              }
+            });
+            console.log('✅ Triggered release workflow for v${{ steps.version.outputs.version }}');
