--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,16 +51,25 @@ jobs:
             target: x86_64-unknown-linux-gnu
             artifact_name: flux9s
             asset_name: flux9s-linux-x86_64.tar.gz
+            use_tar: true
 
           - os: macos-latest
             target: aarch64-apple-darwin
             artifact_name: flux9s
             asset_name: flux9s-macos-aarch64.tar.gz
+            use_tar: true
 
           - os: macos-13
             target: x86_64-apple-darwin
             artifact_name: flux9s
             asset_name: flux9s-macos-x86_64.tar.gz
+            use_tar: true
+
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            artifact_name: flux9s.exe
+            asset_name: flux9s-windows-x86_64.zip
+            use_tar: false
 
     steps:
       - uses: actions/checkout@v4
@@ -72,6 +81,13 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
+
+      - name: Install OpenSSL (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          vcpkg install openssl:x64-windows-static-md
+          echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" >> $env:GITHUB_ENV
+          echo "OPENSSL_DIR=$env:VCPKG_INSTALLATION_ROOT\packages\openssl_x64-windows-static-md" >> $env:GITHUB_ENV
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -89,9 +105,15 @@ jobs:
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Create archive
+      - name: Create archive (Unix)
+        if: matrix.use_tar
         run: |
           tar -czf ${{ matrix.asset_name }} -C target/${{ matrix.target }}/release ${{ matrix.artifact_name }}
+
+      - name: Create archive (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          Compress-Archive -Path target/${{ matrix.target }}/release/${{ matrix.artifact_name }} -DestinationPath ${{ matrix.asset_name }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
