--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 url = "2.5"
 tempfile = "3.10"
-xdg = "2.5"
+directories = "5.0"
 
 # CLI argument parsing
 clap = { version = "4.5", features = ["derive"] }
