--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
             asset_name: flux9s-macos-aarch64.tar.gz
             use_tar: true
 
-          - os: macos-13
+          - os: macos-15-intel
             target: x86_64-apple-darwin
             artifact_name: flux9s
             asset_name: flux9s-macos-x86_64.tar.gz
