--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ chrono = { version = "0.4", features = ["serde"] }
 url = "2.5"
 tempfile = "3.10"
 directories = "5.0"
+csscolorparser = "0.7"
 
 # CLI argument parsing
 clap = { version = "4.5", features = ["derive"] }
