--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 # Kubernetes client with HTTP proxy support - use openssl-tls for better cert support
-kube = { version = "2.0.1", default-features=false, features =  ["client", "runtime", "derive", "http-proxy", "openssl-tls"] }
+kube = { version = "2.0.1", default-features=false, features =  ["client", "runtime", "derive", "http-proxy", "socks5", "openssl-tls"] }
 # k8s-openapi version feature - must match kube-rs version
 k8s-openapi = { version = "0.26.0", default-features = false, features = [
     "v1_31",
