new :ctx for context switching, agent files, cname
Signed-off-by: Daniel Guns <danbguns@gmail.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Build Hugo site
         working-directory: docs
         run: |
-          hugo --minify --baseURL "https://dgunzy.github.io/flux9s/"
+          hugo --minify --baseURL "https://flux9s.ca/"
 
       - name: Copy metadata.json to public
         working-directory: docs
