--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,10 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 async-trait = "0.1"
 
+# Helm release decoding
+base64 = "0.22"
+flate2 = "1.0"
+
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
 url = "2.5"
