--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,14 @@ vendored-openssl = ["openssl/vendored"]
 
 [dependencies]
 # Kubernetes client with HTTP proxy support - use openssl-tls for better cert support
-kube = { version = "2.0.1", default-features=false, features =  ["client", "runtime", "derive", "http-proxy", "socks5", "openssl-tls"] }
+kube = { version = "2.0.1", default-features = false, features = [
+    "client",
+    "runtime",
+    "derive",
+    "http-proxy",
+    "socks5",
+    "openssl-tls",
+] }
 # k8s-openapi version feature - must match kube-rs version
 k8s-openapi = { version = "0.26.0", default-features = false, features = [
     "v1_31",
@@ -63,6 +70,9 @@ openssl = { version = "0.10", optional = true }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
 insta = "1.46.0"
+
+# Version update notifications
+update-informer = "1.1"
 
 [dev-dependencies]
 # Testing
