--- a/crds/notification-controller.crds.yaml
+++ b/crds/notification-controller.crds.yaml
@@ -95,6 +95,8 @@ spec:
                       - ImagePolicy
                       - ImageUpdateAutomation
                       - OCIRepository
+                      - ArtifactGenerator
+                      - ExternalArtifact
                       type: string
                     matchLabels:
                       additionalProperties:
@@ -312,6 +314,8 @@ spec:
                       - ImagePolicy
                       - ImageUpdateAutomation
                       - OCIRepository
+                      - ArtifactGenerator
+                      - ExternalArtifact
                       type: string
                     matchLabels:
                       additionalProperties:
@@ -751,6 +755,7 @@ spec:
                 - github
                 - gitlab
                 - gitea
+                - giteapullrequestcomment
                 - bitbucketserver
                 - bitbucket
                 - azuredevops
@@ -766,6 +771,8 @@ spec:
                 - alertmanager
                 - grafana
                 - githubdispatch
+                - githubpullrequestcomment
+                - gitlabmergerequestcomment
                 - pagerduty
                 - datadog
                 - nats
@@ -886,6 +893,8 @@ spec:
                       - ImagePolicy
                       - ImageUpdateAutomation
                       - OCIRepository
+                      - ArtifactGenerator
+                      - ExternalArtifact
                       type: string
                     matchLabels:
                       additionalProperties:
@@ -1108,6 +1117,8 @@ spec:
                       - ImagePolicy
                       - ImageUpdateAutomation
                       - OCIRepository
+                      - ArtifactGenerator
+                      - ExternalArtifact
                       type: string
                     matchLabels:
                       additionalProperties:
