--- a/crds/flux-operator-fluxinstances.crds.yaml
+++ b/crds/flux-operator-fluxinstances.crds.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.19.0
+    controller-gen.kubebuilder.io/version: v0.20.0
   name: fluxinstances.fluxcd.controlplane.io
 spec:
   group: fluxcd.controlplane.io
@@ -204,6 +204,7 @@ spec:
                     - upstream-alpine
                     - enterprise-alpine
                     - enterprise-distroless
+                    - enterprise-distroless-fips
                     type: string
                   version:
                     description: Version semver expression e.g. '2.x', '2.3.x'.
